tests/NormalTests/paczka1/small_fuzzy/74168210.err
Error in line 2: THkEOK41IM8 S987 9,6
Error in line 3: THkEOK41IM8 S775 61,3
Error in line 8: S585 S585 42,1
Error in line 14: v1ncvkrLf9o A900 49,9
